# co2_sensor

./: Cargo.toml  package-lock.json
.cargo/: config.toml
src/: ble.rs  buttons.rs  co_sensor.rs  display_task.rs  main.rs
src/ble/: services.rs
src/ble/services/: configuration.rs  environment.rs  motion.rs  sound.rs
